--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
                 <label for="email">
                   informe seu e-mail
                 </label>
-                <input class="form-control" type="email" id="email">
+                <input class="form-control" type="email" id="email" placeholder="Email">
                 </div>
 
                 <div class="form-group movies-form-group">
                  <label for="score">
                   informe sua senha
                  </label> 
-                <input class="form-control" type="senha" id="senha">
+                <input class="form-control" type="senha" id="senha" placeholder="Senha">
                 <div class="movies-form-btn">
                   <h5></h5>
                   <button class="movies-btn" type="submit">conectar-se</button>
